--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -64,7 +64,7 @@
 \titleformat{\section}[block]{\Large\bfseries}{\thesection.}{1em}{}
 \titleformat{\subsection}[block]{\normalfont\bfseries}{\thesubsection.}{1em}{}
 \titleformat{\subsubsection}[block]{\normalfont\bfseries}{\thesubsubsection.}{1em}{}
-\titleformat{\paragraph}[block]{\normalfont\bfseries}{\theparagraph.}{1em}{}
+\titleformat{\paragraph}[runin]{\normalfont\bfseries}{}{0em}{}
 
 \setlength{\algomargin}{0em}
 \SetArgSty{textnormal}
