--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -22,8 +22,12 @@
 \section{Background}
 \label{sec:bg}
 
-\import{./specification/}{bg-design.tex}
+\import{./specification/}{bg-concept.tex}
+\import{./specification/}{bg-assumption.tex}
+\import{./specification/}{bg-guarantee.tex}
+\import{./specification/}{bg-compatibility.tex}
 \import{./specification/}{bg-feature.tex}
+\import{./specification/}{bg-discussion.tex}
 
 \section{Notation}
 \label{sec:notation}
