--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -1,121 +1,31 @@
-%author = {J. Gro{\ss}sch\"{a}dl}
-%title = {Instruction Set Extension for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards}
-%SBAC-PAD 
-%pages = {13--19}
-%year = {2002}
+% author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
+% title        = {Low-Power Design of a Functional Unit for Arithmetic in Finite Fields {GF(p)} and {GF(2m)}},
+% booktitle    = {WISA},
+% pages        = {227--243},
+% year         = {2003}
 %
-%author = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje}
-%title = {Low-Power Design of a Functional Unit for Arithmetic in Finite Fields {GF(p)} and {GF(2m)}}
-%WISA
-%pages = {227--243 }
-%year = {2003}
+% author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
+% title        = {Optimized {RISC} Architecture for Multiple-Precision Modular Arithmetic},
+% booktitle    = {SPC},
+% pages        = {253--270},
+% year         = {2003}
+
+% author       = {J. Gro{\ss}sch\"{a}dl},
+% title        = {Architectural Support for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards},
+% booktitle    = {IJHPCA},
+% volume       = {17},
+% number       = {2},
+% pages        = {135--146},
+% year         = {2003}
 %
-%author = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje}
-%title = {Optimized {RISC} Architecture for Multiple-Precision Modular Arithmetic}
-%SPC 
-%pages = {253--270}
-%year = {2003 }
-%
-%author = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje}
-%title = {Architectural Enhancements for Montgomery Multiplication on Embedded {RISC} Processors}
-%ACNS
-%pages = {418--434 }
-%year = {2003}
-%
-%author = {J. Gro{\ss}sch\"{a}dl}
-%title = {Architectural Support for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards}
-%IJHPCA 17(2)
-%pages = {135--146 }
-%year = {2003}
-%
-%author = {J. Gro{\ss}sch\"{a}dl and K.C. Posch and S. Tillich}
-%title = {Architectural Enhancements to Support Digital Signal Processing and Public-Key Cryptography}
-%WISES 
-%pages = {129--143}
-%year = {2004}
-%
-%author = {S. Tillich and J. Gro{\ss}sch\"{a}dl}
-%title = {Accelerating {AES} Using Instruction Set Extensions for Elliptic Curve Cryptography}
-%ICCSA 
-%volume = {2}
-%pages = {665--675}
-%year = {2005}
-%
-%author = {S. Tillich and J. Gro{\ss}sch\"{a}dl and A. Szekely}
-%title = {An Instruction Set Extension for Fast and Memory-Efficient {AES} Implementation}
-%Communications and Multimedia Security 
-%pages = {11--21}
-%year = {2005}
-%
-%author = {J. Gro{\ss}sch\"{a}dl and P. Ienne and L. Pozzi and S. Tillich and A.K. Verma}
-%title = {Combining algorithm exploration with instruction set design: a case study in elliptic curve cryptography}
-%DATE 
-%pages = {218--223}
-%year = {2006}
-%
-%author = {S. Tillich and J. Gro{\ss}sch\"{a}dl}
-%title = {{VLSI} Implementation of a Functional Unit to Accelerate {ECC} and {AES} on 32-Bit Processors}
-%WAIFI 
-%pages = {40--54}
-%year = {2007}
-%
-%author = {T. Vejda and D. Page and J. Gro{\ss}sch\"{a}dl:}
-%title = {Instruction Set Extensions for Pairing-Based Cryptography}
+% author       = {T. Vejda and D. Page and J. Gro{\ss}sch\"{a}dl:}
+% title        = {Instruction Set Extensions for Pairing-Based Cryptography}
 %Pairing 
-%pages = {208--224}
-%year = {2007}
-%
-%author = {J. Gro{\ss}sch\"{a}dl and S. Tillich and A. Szekely}
-%title = {Performance Evaluation of Instruction Set Extensions for Long Integer Modular Arithmetic on a {SPARC} {V8} Processor}
-%DSD 
-%pages = {680--689}
-%year = {2007}
-%
-%author = {\"{O}v\"{u}n\c{c} Kocabas and E. Savas and J. Gro{\ss}sch\"{a}dl}
-%title = {Enhancing an Embedded Processor Core with a Cryptographic Unit for Speed and Security}
-%ReConFig 
-%pages = {409--414}
-%year = {2008 }
-%
-%author = {Z. Shi and X. Yang and R.B. Lee}
-%title = {Alternative application-specific processor architectures for fast arbitrary bit permutations}
-%IJES 3(4): 
-%pages = {219--228}
-%year = {2008}
-%
-%author = {Y. Hilewitz and R.B. Lee}
-%title = {Fast Bit Gather, Bit Scatter and Bit Permutation Instructions for Commodity Microprocessors}
-%Signal Processing Systems 53(1-2):
-%pages = {145--169}
-%year = {2008}
-%
-%author = {Y. Hilewitz and Y.L. Yin and R.B. Lee}
-%title = {Accelerating the {Whirlpool} Hash Function Using Parallel Table Lookup and Fast Cyclical Permutation}
-%FSE
-%pages = {173-188}
-%year = {2008}
-%
-%author = {R.B. Lee and X. Yang and Zhijie Shi}
-%title = {Single-Cycle Bit Permutations with {MOMR} Execution}
-%J. Comput. Sci. Technol. 20(5): 
-%pages = {577--585}
-%year = {2005}
-%
-%author = {J.P. McGregor and R.B. Lee}
-%title = {Architectural techniques for accelerating subword permutations with repetitions}
-%IEEE Trans. VLSI Syst. 11(3)
-%pages = {325--335}
-%year = {2003}
-%
-%author = {R.B. Lee and Z. Shi and X. Yang}
-%title = {Cryptography Efficient Permutation Instructions for Fast Software}
-%IEEE Micro 
-%volume = {21},
-%number = {6}
-%pages = {56--69}
-%year = {2001}
+% pages        = {208--224}
+% year         = {2007}
 
 % =============================================================================
+% EUROCRYPT
 
 @inproceedings{SCARV:LaiMas:90,
   author       = {X. Lai and J.L. Massey},
@@ -126,6 +36,9 @@
   pages        = {389--404},
   year         = {1990}
 }
+
+% -----------------------------------------------------------------------------
+% CHES
 
 @inproceedings{SCARV:GGHJPTW:11,
   author       = {P. Grabher and J. Gro{\ss}sch\"{a}dl and S. Hoerder and K. J\"{a}rvinen and D. Page and S. Tillich and M. W\'{o}jcik},
@@ -156,7 +69,7 @@
   year         = {2008}
 }
 
-@inproceedings{SCARV:TilGro:07,
+@inproceedings{SCARV:TilGro:07:a,
   author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
   title        = {Power Analysis Resistant {AES} Implementation with Instruction Set Extensions},
   booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},  
@@ -216,6 +129,19 @@
   year         = {1999}
 }
 
+% -----------------------------------------------------------------------------
+% FSE
+
+@inproceedings{SCARV:HilYinLee:08,
+  author       = {Y. Hilewitz and Y.L. Yin and R.B. Lee},
+  title        = {Accelerating the {Whirlpool} Hash Function Using Parallel Table Lookup and Fast Cyclical Permutation},
+  booktitle    = {Fast Software Encryption (FSE)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 5086}, 
+  pages        = {173-188},
+  year         = {2008}
+}
+
 @inproceedings{SCARV:BihAndKnu:98,
   author       = {E. Biham and R. Anderson and L. Knudsen},
   title        = {{Serpent}: A New Block Cipher Proposal},
@@ -237,17 +163,10 @@
   year         = {1997}
 }
 
-@inproceedings{SCARV:TheSisPne:09,
-  author       = {D. Theodoropoulos and A. Siskos and D. Pnevmatikatos},
-  title        = {{CCproc}: A Custom {VLIW} Cryptography Co-processor for Symmetric-Key Ciphers},
-  booktitle    = {Applied Reconfigurable Computing: Architectures, Tools and Applications (ARC)},
-  publisher    = {Springer-Verlag},
-  issues       = {LNCS 5453},
-  pages        = {318--323},
-  year         = {2009}
-}
+% -----------------------------------------------------------------------------
+% ASAP
 
-@inproceedings{SCARV:FisLee:05,
+@inproceedings{SCARV:FisLee:05:a,
   author       = {A.M. Fiskiran and R.B. Lee},
   title        = {On-Chip Lookup Tables for Fast Symmetric-Key Encryption},
   booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
@@ -287,7 +206,7 @@
   year         = {2003}
 }
 
-@inproceedings{SCARV:GroKam:03,
+@inproceedings{SCARV:GroKam:03:b,
   author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
   title        = {Instruction Set Extension for Fast Elliptic Curve Cryptography over Binary Finite Fields {GF(2m)}},
   booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
@@ -311,7 +230,10 @@
   year         = {2000}
 }
 
-@inproceedings{SCARV:FisLee:05,
+% -----------------------------------------------------------------------------
+% ITCC
+
+@inproceedings{SCARV:FisLee:05:b,
   author       = {A.M. Fiskiran and R.B. Lee},
   title        = {Fast Parallel Table Lookups to Accelerate Symmetric-Key Cryptography},
   booktitle    = {Information Technology: Coding and Computing (ITCC)},
@@ -328,6 +250,9 @@
   pages        = {569--577},
   year         = {2004}
 }
+
+% -----------------------------------------------------------------------------
+% ICCD
 
 @inproceedings{SCARV:ShiLee:02,
   author       = {Z. Shi and R.B. Lee},
@@ -361,6 +286,58 @@
   year         = {2000}
 }
 
+% -----------------------------------------------------------------------------
+% DAC
+
+@inproceedings{SCARV:RKLMR:03,
+  author       = {S. Ravi and P.C. Kocher and R.B. Lee and G. McGraw and A. Raghunathan},
+  title        = {Security as a new dimension in embedded system design},
+  booktitle    = {Design Automation Conference (DAC)},
+  pages        = {753--760},
+  year         = {2004}
+}
+
+@inproceedings{SCARV:BurMutTiw:16,
+  author       = {W. Burleson and O. Mutlu and M. Tiwari},
+  title        = {Who is the major threat to tomorrow's security?  You, the hardware designer},
+  booktitle    = {Design Automation Conference (DAC)},
+  pages        = {145:1--145:5},
+  year         = {2016}
+}
+
+% -----------------------------------------------------------------------------
+% DATE
+
+@inproceedings{SCARV:RegIen:16,
+  author       = {F. Regazzoni and P. Ienne},
+  title        = {Instruction Set Extensions for Secure Applications},
+  booktitle    = {Design, Automation, and Test in Europe (DATE)},
+  pages        = {1529--1534},
+  year         = {2016}
+}
+
+@inproceedings{SCARV:GIPTV:06,
+  author       = {J. Gro{\ss}sch\"{a}dl and P. Ienne and L. Pozzi and S. Tillich and A.K. Verma},
+  title        = {Combining algorithm exploration with instruction set design: a case study in elliptic curve cryptography},
+  booktitle    = {Design, Automation, and Test in Europe (DATE)},
+  pages        = {218--223},
+  year         = {2006}
+}
+
+% -----------------------------------------------------------------------------
+% misc.
+
+@inproceedings{SCARV:TilGro:05,
+  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
+  title        = {Accelerating {AES} Using Instruction Set Extensions for Elliptic Curve Cryptography},
+  booktitle    = {International Conference Computational Science and Its Applications (ICCSA)},
+  volume       = {2},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 3481},
+  pages        = {665--675},
+  year         = {2005}
+}
+
 @inproceedings{SCARV:GeYarHei:18,
   author       = {Q. Ge and Y. Yarom and G. Heiser},
   title        = {No security without time protection: we need a new hardware-software contract},
@@ -368,7 +345,27 @@
   year         = {2018}
 }
 
-@inproceedings{SCARV:GroKam:03,
+@inproceedings{SCARV:TilGro:07:b,
+  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
+  title        = {{VLSI} Implementation of a Functional Unit to Accelerate {ECC} and {AES} on 32-Bit Processors},
+  booktitle    = {Workshop on the Arithmetic of Finite Fields (WAIFI)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 4547},
+  pages        = {40--54},
+  year         = {2007}
+}
+
+@inproceedings{SCARV:TilGroSze:05,
+  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl and A. Szekely},
+  title        = {An Instruction Set Extension for Fast and Memory-Efficient {AES} Implementation},
+  booktitle    = {Communications and Multimedia Security (CMS)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 3677},
+  pages        = {11--21},
+  year         = {2005}
+}
+
+@inproceedings{SCARV:GroKam:03:a,
   author       = {J. Gro{\ss}sch{\"a}dl and G.-A. Kamendje},
   title        = {Architectural Enhancements for Montgomery Multiplication on Embedded {RISC} Processors},
   booktitle    = {Applied Cryptography and Network Security (ACNS)},
@@ -376,6 +373,16 @@
   series       = {LNCS 2846},
   pages        = {418--434},
   year         = {2003}
+}
+
+@inproceedings{SCARV:TheSisPne:09,
+  author       = {D. Theodoropoulos and A. Siskos and D. Pnevmatikatos},
+  title        = {{CCproc}: A Custom {VLIW} Cryptography Co-processor for Symmetric-Key Ciphers},
+  booktitle    = {Applied Reconfigurable Computing: Architectures, Tools and Applications (ARC)},
+  publisher    = {Springer-Verlag},
+  issues       = {LNCS 5453},
+  pages        = {318--323},
+  year         = {2009}
 }
 
 @inproceedings{SCARV:GroKam:04,
@@ -394,22 +401,6 @@
   booktitle    = {International Conference on Information Science and Security (ICISS)},
   pages        = {102--107},
   year         = {2008}
-}
-
-@inproceedings{SCARV:RKLMR:03,
-  author       = {S. Ravi and P.C. Kocher and R.B. Lee and G. McGraw and A. Raghunathan},
-  title        = {Security as a new dimension in embedded system design},
-  booktitle    = {Design Automation Conference (DAC)},
-  pages        = {753--760},
-  year         = {2004}
-}
-
-@inproceedings{SCARV:BurMutTiw:16,
-  author       = {W. Burleson and O. Mutlu and M. Tiwari},
-  title        = {Who is the major threat to tomorrow's security?  You, the hardware designer},
-  booktitle    = {Design Automation Conference (DAC)},
-  pages        = {145:1--145:5},
-  year         = {2016}
 }
 
 @inproceedings{SCARV:WuWeaAus:01,
@@ -436,14 +427,6 @@
   year         = {2018}
 } 
 
-@inproceedings{SCARV:RegIen:16,
-  author       = {F. Regazzoni and P. Ienne},
-  title        = {Instruction Set Extensions for Secure Applications},
-  booktitle    = {Design, Automation, and Test in Europe (DATE)},
-  pages        = {1529--1534},
-  year         = {2016}
-}
-
 @inproceedings{SCARV:TilKirSze:10,
   author       = {S. Tillich and M. Kirschbaum and A. Szekely},
   title        = {{SCA}-resistant Embedded Processors: The Next Generation},
@@ -452,7 +435,99 @@
   year         = {2010}
 } 
 
+@inproceedings{SCARV:NREAMM:12,
+  author       = {K.D. Nima and E.A. Reza and A. Erfan and T. Ahmad and R. Mahsa and M. Mina},
+  title        = {{CIARP}: Crypto instruction-aware {RISC} processor},
+  booktitle    = {IEEE Symposium on Computers \& Informatics (ISCI)},
+  pages        = {208--213},
+  year         = {2012}
+}
+
+@inproceedings{SCARV:KocSavGro:08,
+  author       = {\"{O}. Kocabas and E. Savas and J. Gro{\ss}sch\"{a}dl},
+  title        = {Enhancing an Embedded Processor Core with a Cryptographic Unit for Speed and Security},
+  booktitle    = {Reconfigurable Computing and FPGAs (ReConFig)},
+  pages        = {409--414},
+  year         = {2008}
+}
+
+@inproceedings{SCARV:SimChiAnd:18,
+  author       = {L. Simon and D. Chisnall and R. Anderson},
+  title        = {What you get is what you {C}: Controlling side effects in mainstream {C} compilers},
+  booktitle    = {IEEE European Symposium on Security \& Privacy (Euro-S\&P)},
+  pages        = {1--15},
+  year         = {2018}
+}
+
+@inproceedings{SCARV:AweAus:17,
+  author       = {Z.B. Aweke and T.M. Austin},
+  title        = {{Ozone}: Efficient Execution with Zero Timing Leakage for Modern Microarchitectures},
+  booktitle    = {Hardware Oriented Security and Trust (HOST)},
+  pages        = {153},
+  year         = {2017}
+}
+
+@inproceedings{SCARV:GroTilSze:07,
+  author       = {J. Gro{\ss}sch\"{a}dl and S. Tillich and A. Szekely},
+  title        = {Performance Evaluation of Instruction Set Extensions for Long Integer Modular Arithmetic on a {SPARC} {V8} Processor},
+  booktitle    = {Digital System Design Architectures, Methods and Tools (DSD)},
+  pages        = {680--689},
+  year         = {2007}
+}
+
+@inproceedings{SCARV:APRJ:11,
+  author       = {A. Arora and S. Parameswaran and R.G. Ragel and D. Jayasinghe},
+  title        = {A Hardware/Software Countermeasure and a Testing Framework for Cache Based Side Channel Attacks},
+  booktitle    = {Trust, Security and Privacy in Computing and Communications (TrustCom)},
+  pages        = {1005-1014},
+  year         = {2011}
+}
+
+@inproceedings{SCARV:Gro:02,
+  author       = {J. Gro{\ss}sch\"{a}dl},
+  title        = {Instruction Set Extension for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards},
+  booktitle    = {Computer Architecture and High Performance Computing (SBAC-PAD)},
+  pages        = {13--19},
+  year         = {2002}
+}
+
 % =============================================================================
+% JCEN
+
+@article{SCARV:GYCH:18,
+  author       = {Q. Ge and Y. Yarom and D. Cock and G. Heiser},
+  title        = {A Survey of Microarchitectural Timing Attacks and Countermeasures on Contemporary Hardware},
+  journal      = {Journal of Cryptographic Engineering (JCEN)},
+  publisher    = {Springer-Verlag},
+  volume       = {8},
+  issue        = {1},
+  pages        = {1--27},
+  year         = {2018}
+}
+
+@article{SCARV:MayMur:16,
+  author       = {M. Mayhew and R. Muresan},
+  title        = {An overview of hardware-level statistical power analysis attack countermeasures},
+  journal      = {Journal of Cryptographic Engineering (JCEN)},
+  publisher    = {Springer-Verlag},
+  volume       = {7},
+  issue        = {3},
+  pages        = {213--244},
+  year         = {2017}
+}
+
+% -----------------------------------------------------------------------------
+% misc.
+
+@article{SCARV:YumSav:15,
+  author       = {K. Yumbul and E. Sava\c{s}},
+  title        = {Enhancing an Embedded Processor Core for Efficient and Isolated Execution of Cryptographic Algorithms},
+  journal      = {The Computer Journal},
+  volume       = {58},
+  number       = {10},
+  pages        = {2368--2387},
+  year         = {2015}
+}
 
 @article{SCARV:LeeShiYan:01,
   author       = {R.B. Lee and Z. Shi and X. Yang},
@@ -462,6 +537,16 @@
   number       = {6},
   pages        = {56--69},
   year         = {2001}
+}
+
+@article{MASCAB:LeeYanShi:05,
+  author       = {R.B. Lee and X. Yang and Zhijie Shi},
+  title        = {Single-Cycle Bit Permutations with {MOMR} Execution},
+  journal      = {Journal of Computer Science Technology},
+  volume       = {20},
+  number       = {5},
+  pages        = {577--585},
+  year         = {2005}
 }
 
 @article{SCARV:LeeFis:05,
@@ -474,13 +559,15 @@
   year         = {2005}
 }
 
-@article{SCARV:StePre:18,
-  author       = {J. Stecklina and T. Prescher},
-  title        = {{LazyFP}: Leaking {FPU} Register State using Microarchitectural Side-Channels},
-  journal      = {CoRR},
-  volume       = {abs/1806.07480},
-  year         = {2018},
-  url          = {http://arxiv.org/abs/1806.07480}
+@article{SCARV:HilLee:08,
+  author       = {Y. Hilewitz and R.B. Lee},
+  title        = {Fast Bit Gather, Bit Scatter and Bit Permutation Instructions for Commodity Microprocessors},
+  journal      = {Journal of Signal Processing Systems},
+  publisher    = {Springer-Verlag},
+  volume       = {53},
+  number       = {1-2},
+  pages        = {145--169},
+  year         = {2008}
 }
 
 @article{SCARV:Mittal:16,
@@ -503,26 +590,42 @@
   year         = {2004}
 }
 
-@article{SCARV:GYCH:18,
-  author       = {Q. Ge and Y. Yarom and D. Cock and G. Heiser},
-  title        = {A Survey of Microarchitectural Timing Attacks and Countermeasures on Contemporary Hardware},
-  journal      = {Journal of Cryptographic Engineering (JCEN)},
-  publisher    = {Springer-Verlag},
-  volume       = {8},
-  issue        = {1},
-  pages        = {1--27},
-  year         = {2018}
+@article{SCARV:ShiYanLee:08,
+  author       = {Z. Shi and X. Yang and R.B. Lee},
+  title        = {Alternative application-specific processor architectures for fast arbitrary bit permutations},
+  journal      = {International Journal of Engineering and Science (IJES)}, 
+  volume       = {3},
+  number       = {4},
+  pages        = {219--228},
+  year         = {2008}
 }
 
-@article{SCARV:MayMur:16,
-  author       = {M. Mayhew and R. Muresan},
-  title        = {An overview of hardware-level statistical power analysis attack countermeasures},
-  journal      = {Journal of Cryptographic Engineering (JCEN)},
-  publisher    = {Springer-Verlag},
-  volume       = {7},
-  issue        = {3},
-  pages        = {213--244},
-  year         = {2017}
+% =============================================================================
+
+@article{SCARV:StePre:18,
+  author       = {J. Stecklina and T. Prescher},
+  title        = {{LazyFP}: Leaking {FPU} Register State using Microarchitectural Side-Channels},
+  journal      = {CoRR},
+  volume       = {abs/1806.07480},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1806.07480}
+}
+
+@article{SCARV:RagAmbPar:15,
+  author       = {R.G. Ragel and J.A. Ambrose and S. Parameswaran},
+  title        = {{SecureD}: A Secure Dual Core Embedded Processor},
+  journal      = {CoRR},
+  volume       = {abs/1511.01946},
+  year         = {2015},
+  url          = {http://arxiv.org/abs/1511.01946}
+}
+
+@misc{SCARV:YHEF:18,
+  author       = {J. Yu and L. Hsiung and M. El Hajj† and C.W. Fletcher},
+  title        = {Data Oblivious {ISA} Extensions for Side Channel-Resistant and High Performance Computing},
+  howpublished = {Cryptology ePrint Archive, Report 2018/808},
+  year         = {2018},
+  url          = {http://eprint.iacr.org/2018/808.pdf}
 }
 
 % =============================================================================
@@ -586,6 +689,16 @@
   url          = {http://csrc.nist.gov}
 }
 
+% -----------------------------------------------------------------------------
+
+@misc{SCARV:RFC:7748,
+  author       = {A. Langley and  M. Hamburg and S. Turner},
+  title        = {Elliptic Curves for Security},
+  howpublished = {Internet Engineering Task Force (IETF) Request for Comments (RFC) 7748},
+  year         = {2016},
+  url          = {http://tools.ietf.org/html/rfc7748}
+}
+
 % =============================================================================
 
 @misc{SCARV:RRSY:98,
@@ -596,16 +709,7 @@
 }
 
 % =============================================================================
-
-@techreport{SCARV:XS1:09,
-  author       = {D. May},
-  title        = {The XMOS XS1 Architecture},
-  institution  = {XMOS Ltd.},
-  year         = {2009},
-  url          = {http://www.xmos.com/published/xmos-xs1-architecture}
-}
-
-% -----------------------------------------------------------------------------
+% RISC-V (plus SiFive etc.)
 
 @techreport{SCARV:SiFive:rocketE31,
   author       = {SiFive Inc.},
@@ -632,6 +736,7 @@
 }
 
 % -----------------------------------------------------------------------------
+% ARM
 
 @techreport{SCARV:ARMv5:05,
   title        = {{ARMv5}    {A}rchitecture {R}eference {M}anual},
@@ -674,61 +779,49 @@
 }
 
 % -----------------------------------------------------------------------------
+% Intel
 
-@techreport{SCARV:X86:1:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume  1: Basic Architecture},
+@techreport{SCARV:X86:1:18,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual (Volume 1: Basic Architecture)},
+  number       = {253665-067US},
   institution  = {Intel Corp.},
-  year         = {2012},
+  year         = {2018},
   url          = {http://software.intel.com/en-us/articles/intel-sdm}
 }
 
-@techreport{SCARV:X86:2a:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume 2A: Instruction Set Reference A-M},
+@techreport{SCARV:X86:2:18,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual (Volume 2: Instruction Set Reference A-Z)},
+  number       = {325383-067US},
   institution  = {Intel Corp.},
-  year         = {2012},
+  year         = {2018},
   url          = {http://software.intel.com/en-us/articles/intel-sdm}
 }
 
-@techreport{SCARV:X86:2b:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume 2B: Instruction Set Reference N-Z},
+@techreport{SCARV:X86:3:18,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual (Volume 3: System Programming Guide)},
+  number       = {325384-067US},
   institution  = {Intel Corp.},
-  year         = {2012},
+  year         = {2018},
   url          = {http://software.intel.com/en-us/articles/intel-sdm}
 }
 
-@techreport{SCARV:X86:2c:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume 2C: Instruction Set Reference},
+@techreport{SCARV:X86:4:18,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual (Volume 4: Model-Specific Registers)},
+  number       = {335592-067US},
   institution  = {Intel Corp.},
-  year         = {2012},
+  year         = {2018},
   url          = {http://software.intel.com/en-us/articles/intel-sdm}
 }
 
-@techreport{SCARV:X86:3a:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume 3A: System Programming Guide, Part 1},
-  institution  = {Intel Corp.},
-  year         = {2012},
-  url          = {http://software.intel.com/en-us/articles/intel-sdm}
-}
+% -----------------------------------------------------------------------------
+% misc.
 
-@techreport{SCARV:X86:3b:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume 3B: System Programming Guide, Part 2},
-  institution  = {Intel Corp.},
-  year         = {2012},
-  url          = {http://software.intel.com/en-us/articles/intel-sdm}
-}
-
-@techreport{SCARV:X86:3c:12,
-  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
-  number       = {Volume 3C: System Programming Guide, Part 3},
-  institution  = {Intel Corp.},
-  year         = {2012},
-  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+@techreport{SCARV:XS1:09,
+  author       = {D. May},
+  title        = {The XMOS XS1 Architecture},
+  institution  = {XMOS Ltd.},
+  year         = {2009},
+  url          = {http://www.xmos.com/published/xmos-xs1-architecture}
 }
 
 % =============================================================================
