--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -1,43 +1,43 @@
 % =============================================================================
 
-% processor/co-processor/accelerator
+\subsection*{processor/co-processor/accelerator}
 \cite{SCARV:Gutmann:00}
 \cite{SCARV:WuWeaAus:01}
 \cite{SCARV:TheSisPne:09}
 \cite{SCARV:MTRGS:99}
 \cite{SCARV:GGHJPTW:11}
 
-% ISEs: general
+\subsection*{crypto/security-specific processor design}
+\cite{SCARV:KocSavGro:08,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
+
+\subsection*{ISEs: general}
 \cite{SCARV:BarGioMar:09}
 \cite{SCARV:RegIen:16}
 \cite{SCARV:FazLopOli:18}
 
-% arith: \B{Z}_{N} and general multi-precision
-\cite{SCARV:GAST:05}
-% arith: \B{F}_{2^m}
-\cite{SCARV:GroKam:03,SCARV:FisLee:04}
-% arith: OEF
-\cite{SCARV:GKP:04}
-% arith: mixed purpose
+\subsection*{arith: $\B{Z}_{N}$ and general multi-precision}
+\cite{SCARV:Gro:02,SCARV:GroKam:03:a,SCARV:GAST:05,SCARV:GroTilSze:07}
+\subsection*{arith: $\B{F}_{2^m}$ and other fields}
+\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GKP:04}
+\subsection*{arith: mixed purpose}
 \cite{SCARV:GroSav:04}
 
-% AES: attack resistant
-\cite{SCARV:TilGro:07}
-% AES: efficient
-\cite{SCARV:TilGro:06}
+\subsection*{co-design}
+\cite{SCARV:KLWGSTW:06,SCARV:GIPTV:06}
 
-% ECC
-\cite{SCARV:KLWGSTW:06}
+\subsection*{AES: attack resistant}
+\cite{SCARV:TilGro:07:a}
+\subsection*{AES: efficient}
+\cite{SCARV:TilGroSze:05,SCARV:TilGro:06,SCARV:APRJ:11}
+\subsection*{AES: mixed, e.g., vs. ECC}
+\cite{SCARV:TilGro:05,SCARV:TilGro:07:b}
 
-% table look-up + memory access
-\cite{SCARV:FisLee:01,SCARV:FisLee:05,SCARV:FisLee:05}
+\subsection*{table look-up and memory access}
+\cite{SCARV:FisLee:01,SCARV:FisLee:05:a,SCARV:FisLee:05:b,SCARV:HilYinLee:08}
 
-% bit-permitation
-
-\cite{SCARV:ShiLee:00,SCARV:YanLee:00,SCARV:McGLee:01,SCARV:ShiLee:02,SCARV:ShiYanLee:03,SCARV:LSYRR:04}
-
-% bit-slicing
-
+\subsection*{bit-permutation}
+\cite{SCARV:ShiLee:00,SCARV:YanLee:00,SCARV:McGLee:01,SCARV:LeeShiYan:01,SCARV:ShiLee:02,SCARV:ShiYanLee:03,SCARV:LSYRR:04,MASCAB:LeeYanShi:05,SCARV:HilYinLee:08,SCARV:HilLee:08,SCARV:ShiYanLee:08}
+\subsection*{bit-slicing}
 As introduced by Biham~\cite{SCARV:Biham:97}, bit-slicing is based on
 a) a non-standard {\em representation} of data,
    and
@@ -55,6 +55,7 @@ instruction'' or ISE; the suggestion was later investigated in detail by
 Grabher et al.~\cite{SCARV:GraGroPag:08}.  In both cases, the idea is to 
 ``compress'' a sub-circuit, i.e., the sequence of bit-wise instructions 
 representing an $n$-input Boolean function, into a Look-Up Table (LUT): 
+
 the LUT is first configured with a truth table for the function, and then 
 accessed to apply said function.  
 
