--- a/docs/specification/notation.tex
+++ b/docs/specification/notation.tex
@@ -60,11 +60,11 @@
 \item The following terms refer to fixed-length (sub-)sequences of $n$ bits
       \[
       \begin{array}{lcc@{\;}c@{\;}r}
-      \mbox{crumb}    & \leadsto & n &=&  2 \\
-      \mbox{nibble}   & \leadsto & n &=&  4 \\
-      \mbox{byte}     & \leadsto & n &=&  8 \\
-      \mbox{halfword} & \leadsto & n &=& 16 \\
-      \mbox    {word} & \leadsto & n &=& 32 \\
+      \mbox{crumb}    &\Longrightarrow& n &=&  2 \\
+      \mbox{nibble}   &\Longrightarrow& n &=&  4 \\
+      \mbox{byte}     &\Longrightarrow& n &=&  8 \\
+      \mbox{halfword} &\Longrightarrow& n &=& 16 \\
+      \mbox    {word} &\Longrightarrow& n &=& 32 \\
       \end{array}
       \]
       where perhaps all but the first are fairly standard.
