Fix INS instruction.
 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/implementation/verify.tex
	modified:   rtl/coprocessor/scarv_cop_palu.v
	modified:   verif/formal/fml_chk_instr_ins_cr.v

--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -54,6 +54,8 @@ verification flow.
     when the pack width is 1.
 \item Rotate instruction {\em model} was incorrect if the rotate ammount was
     greater than twice the pack width.
+\item Insert bitfield instruction was blanking out destination beyond the
+    bitfield.
 \end{itemize}
 
 \subsection{Constrained Random Flow}
